<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itzhari.platzigram.view.CreateaccountActivity">
    <include layout="@layout/actionbar_toolbar"></include>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="@dimen/activity_vertical_margin"
           android:orientation="vertical">
           <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/edittex_margin_createacount">
           <android.support.design.widget.TextInputEditText
               android:id="@+id/email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_email"
               android:theme="@style/EditTextBlack"
               />
       </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/edittex_margin_createacount">
               <android.support.design.widget.TextInputEditText
                   android:id="@+id/name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_name"
                   android:theme="@style/EditTextBlack"
                   />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/edittex_margin_createacount">
               <android.support.design.widget.TextInputEditText
                   android:id="@+id/user"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_user"
                   android:theme="@style/EditTextBlack"
                   />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/edittex_margin_createacount">
               <android.support.design.widget.TextInputEditText
                   android:id="@+id/password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_password"
                   android:theme="@style/EditTextBlack"
                   android:inputType="textPassword"
                   />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/edittex_margin_createacount">
               <android.support.design.widget.TextInputEditText
                   android:id="@+id/confirpass"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_confirm_password"
                   android:theme="@style/EditTextBlack"
                   android:inputType="textPassword"
                   />
               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/login"
                   android:text="@string/text_botton_creatteaccount"
                   android:theme="@style/RaisedButtonDark"

                   />
           </android.support.design.widget.TextInputLayout>


       </LinearLayout>
   </ScrollView>
</android.support.design.widget.CoordinatorLayout>
